sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: reassignment to val
        i=i-j
         ^AlgInsertionSort:12: error: not found: value last
    last=v
    ^