sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var len:Int=getValueCount()
  for (i <- 1 to len-1) {
    var v:Int=i
    for (j <- 1 to i) {
      if (i-j>v) {
        i=i-j
        var last:Int=i
      }
    }
    last=v
  }
}